@@ -303,7 +303,6 @@ struct _img_window_struct
 	/* Project related variables */
 	gchar       *project_filename;		// project name for saving
 	gchar       *project_current_dir;
-	gboolean	distort_images;
 	gboolean	bye_bye_transition;
 	gboolean	project_is_modified;
 	gboolean	relative_filenames;
