@@ -1,6 +1,9 @@
 Imagination changelog
 
-xx/xx/19 - 3.4		- Subtitle info are no more saved in the project file if the slide hasn't any text.
+xx/xx/19 - 3.5		- Finally got rid of those annoying black borders around image.
+			- Fixed seg-fault when quitting.
+
+18/12/18 - 3.4		- Subtitle info are no more saved in the project file if the slide hasn't any text.
 			- Starting the preview from the middle plays music accordingly to its timing in the slideshow.
 			- Project can be ported to other media as filenames can be saved without their path.
 			- Subtitle can be now rotated.
